--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Notes App</title>
+
+  <link rel="stylesheet" href="./src/styles/styles.css" />
+<script type="module" src="./src/app.js" defer></script>
+
 </head>
 
 <body>
@@ -19,5 +23,7 @@
     </section>
     <section class="notes-list" id="notesList"></section>
   </main>
+
+  <div id="loader" style="display:none; text-align:center;">Loading...</div>
 </body>
 </html>
